--- a/Contact Us.html
+++ b/Contact Us.html
@@ -3,47 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {
-        background-color: rgb(2, 6, 65);
-      }
-
-      h1 {
-        color: rgb(1, 255, 22);
-      }
-
-      h2 {
-        color: rgb(1, 255, 242);
-      }
-
-      h3 {
-        color: rgb(255, 1, 1);
-      }
-
-      h4 {
-        color: rgb(249, 253, 0);
-      }
-
-      p {
-        color: rgb(253, 253, 253);
-      }
-      li {
-        color: rgb(255, 255, 255);
-      }
-      a {
-        color: rgb(255, 255, 255);
-      }
-      table {
-        color: rgb(255, 255, 255);
-      }
-      label {
-        color: rgb(255, 255, 255);
-      }
-      input {
-        color: white;
-      }
-    </style>
     <title>1st try</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <img src="./images/2.png" alt="logo" width="200" />
