--- a/Payment.html
+++ b/Payment.html
@@ -3,72 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {
-        background-color: rgb(2, 6, 65);
-      }
-
-      h1 {
-        color: rgb(1, 255, 22);
-      }
-
-      h2 {
-        color: rgb(1, 255, 242);
-      }
-
-      h3 {
-        color: rgb(255, 1, 1);
-      }
-
-      h4 {
-        color: rgb(249, 253, 0);
-      }
-
-      p {
-        color: rgb(253, 253, 253);
-      }
-      li { 
-            color: rgb(255, 255, 255);
-        }
-        a {
-            color: rgb(255, 255, 255);
-        }
-        table {
-            color: rgb(255, 255, 255);
-        }
-        table {
-        color: rgb(255, 255, 255);
-      }
-      label {
-        color: rgb(255, 255, 255);
-      }
-      input {
-        color: rgb(0, 0, 0);
-      }
-    form {
-      color: white;
-    }
-    </style>
-    </style>
-
     <title>Payment</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-        <img src="./images/2.png" alt="logo" width="200" />
-        <h1 id="top">Btounsi Free Fire Shop</h1>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./Prices.html">Prices</a></li>
-          <li><a href="./Payment.html">Payment</a></li>
-          <li><a href="./Contact Us.html">Contact Us</a></li>
-        </ul>
-        
-        <h2>
-          Welcome To Our Site The <sup>1st</sup> Free Fire Shop in Tunisia
-          <sub>By ibrahimcr7</sub>
-        </h2>
-        <br />
-        <img src="./images/3.jpg" width="100%" alt="image of Diamand" />
+    <img src="./images/2.png" alt="logo" width="200" />
+    <h1 id="top">Btounsi Free Fire Shop</h1>
+    <ul>
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./Prices.html">Prices</a></li>
+      <li><a href="./Payment.html">Payment</a></li>
+      <li><a href="./Contact Us.html">Contact Us</a></li>
+    </ul>
+
+    <h2>
+      Welcome To Our Site The <sup>1st</sup> Free Fire Shop in Tunisia
+      <sub>By ibrahimcr7</sub>
+    </h2>
+    <br />
+    <img src="./images/3.jpg" width="100%" alt="image of Diamand" />
     <h1>Payment info</h1>
     <form action="" method="">
       <label for="name"> Full Name</label>
@@ -112,18 +65,18 @@
       <input type="radio" name="ammount" id="" value="440" /> 440 diamands : 20
       DT
       <br />
-      <br>
+      <br />
       <label for="Free Fire Id">Free Fire Id</label>
-      <input type="text" name="Free Fire Id" id="Free Fire Id"> 
-      <br>
-      <br>
+      <input type="text" name="Free Fire Id" id="Free Fire Id" />
+      <br />
+      <br />
       <button type="submit">Submit</button>
       <!-- button tnajem ta3milha bil input w fi type t7ot submit-->
     </form>
     <br />
     <br />
     <br />
-        <a href="#top">Go top</a>
+    <a href="#top">Go top</a>
     <h4>Ibrahim Ben Mohamed <sup>Copyright &copy;2020</sup></h4>
   </body>
 </html>
