--- a/Contact Us.html
+++ b/Contact Us.html
@@ -7,27 +7,42 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="./images/2.png" alt="logo" width="200" />
-    <h1 id="top">Btounsi Free Fire Shop</h1>
     <ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./Prices.html">Prices</a></li>
-      <li><a href="./Payment.html">Payment</a></li>
-      <li><a href="./Contact Us.html">Contact Us</a></li>
+      <li>
+        <a href="./index.html">
+          <img class="border" src="./images/01.png" alt=""
+        /></a>
+      </li>
+      <li>
+        <a href="./Prices.html"
+          ><img class="border" src="./images/02.jpg" alt=""
+        /></a>
+      </li>
+      <li>
+        <a href="./Payment.html"
+          ><img class="border" src="./images/03.jpg" alt="" />
+        </a>
+      </li>
+      <li>
+        <a href="./Contact Us.html"
+          ><img class="border" src="./images/04.jpg" alt=""
+        /></a>
+      </li>
     </ul>
 
+    <img id="top" src="./images/2.JPG" alt="logo" width="200" />
     <h2>
       Welcome To Our Site The <sup>1st</sup> Free Fire Shop in Tunisia
       <sub>By ibrahimcr7</sub>
     </h2>
     <br />
-    <img src="./images/3.jpg" width="100%" alt="image of Diamond" />
+    <img src="./images/3.jpg" width="100%" alt="image of Diamand" />
     <h1>Recharge Free Fire Diamonds</h1>
     <br />
     <img src="./images/1.jpg" alt="image of Diamond" />
-    <p>
+    <h5>
       Hi guys if you want to contact us you can send a message:
-    </p>
+    </h5>
     <br />
     <form action="">
       <textarea
@@ -42,7 +57,7 @@
     </form>
     <br />
     <br />
-    <p>Or you can contact us through this phone number +21653999245</p>
+    <h5>Or you can contact us through this phone number +21653999245</h5>
     <br />
     <br />
     <a href="#top">Go top</a>
