--- a/Payment.html
+++ b/Payment.html
@@ -7,15 +7,30 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="./images/2.png" alt="logo" width="200" />
-    <h1 id="top">Btounsi Free Fire Shop</h1>
     <ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./Prices.html">Prices</a></li>
-      <li><a href="./Payment.html">Payment</a></li>
-      <li><a href="./Contact Us.html">Contact Us</a></li>
+      <li>
+        <a href="./index.html">
+          <img class="border" src="./images/01.png" alt=""
+        /></a>
+      </li>
+      <li>
+        <a href="./Prices.html"
+          ><img class="border" src="./images/02.jpg" alt=""
+        /></a>
+      </li>
+      <li>
+        <a href="./Payment.html"
+          ><img class="border" src="./images/03.jpg" alt="" />
+        </a>
+      </li>
+      <li>
+        <a href="./Contact Us.html"
+          ><img class="border" src="./images/04.jpg" alt=""
+        /></a>
+      </li>
     </ul>
 
+    <img id="top" src="./images/2.JPG" alt="logo" width="200" />
     <h2>
       Welcome To Our Site The <sup>1st</sup> Free Fire Shop in Tunisia
       <sub>By ibrahimcr7</sub>
@@ -51,8 +66,8 @@
         placeholder="Password"
       />
       <br />
-      <p>Select the offer you want to buy :</p>
-      <br />
+      <h5>Select the offer you want to buy</h5>
+
       <input type="radio" name="ammount" id="" value="110" /> 110 diamands : 5
       DT
       <br />
