--- a/index.html
+++ b/index.html
@@ -7,15 +7,30 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="./images/2.png" alt="logo" width="200" />
-    <h1 id="top">Btounsi Free Fire Shop</h1>
     <ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./Prices.html">Prices</a></li>
-      <li><a href="./Payment.html">Payment</a></li>
-      <li><a href="./Contact Us.html">Contact Us</a></li>
+      <li>
+        <a href="./index.html">
+          <img class="border" src="./images/01.png" alt=""
+        /></a>
+      </li>
+      <li>
+        <a href="./Prices.html"
+          ><img class="border" src="./images/02.jpg" alt=""
+        /></a>
+      </li>
+      <li>
+        <a href="./Payment.html"
+          ><img class="border" src="./images/03.jpg" alt="" />
+        </a>
+      </li>
+      <li>
+        <a href="./Contact Us.html"
+          ><img class="border" src="./images/04.jpg" alt=""
+        /></a>
+      </li>
     </ul>
 
+    <img id="top" src="./images/2.JPG" alt="logo" width="200" />
     <h2>
       Welcome To Our Site The <sup>1st</sup> Free Fire Shop in Tunisia
       <sub>By ibrahimcr7</sub>
@@ -29,23 +44,12 @@
     <br />
     <h2>About Us</h2>
     <p>
-      <strong>Ye Sid Ye Degla</strong>. Lorem ipsum, dolor sit amet consectetur
-      adipisicing elit. Necessitatibus, autem numquam pariatur perspiciatis
-      eligendi consectetur exercitationem minus perferendis nam delectus aut
-      voluptate odit dolorem doloribus aliquam eos fuga esse. Dolores quasi quia
-      enim laudantium porro, natus perferendis facilis nulla, commodi officia
-      molestias quis dicta maxime doloremque soluta odio illo quidem eius
-      repudiandae at. Voluptatum distinctio a unde! Ex, magni temporibus cum eum
-      assumenda quo saepe sunt facilis dolorum! Expedita temporibus alias
-      voluptatem ipsa quos libero minima perferendis, soluta voluptas! Officia
-      possimus, quo corrupti aperiam officiis, dolore placeat nisi tempore
-      debitis modi quia assumenda culpa. Assumenda sequi nostrum dolor qui
-      distinctio? Eaque dolor corporis repudiandae maxime eum aliquam, sequi
-      repellat, voluptatum labore illum molestiae ducimus ea modi libero quas
-      facere excepturi! Unde exercitationem molestias dolorem id praesentium
-      facere voluptatem cumque repellat, quo laudantium sed sequi inventore
-      nulla aut natus quasi a illum voluptates. Mollitia iste debitis quidem
-      corrupti cupiditate perspiciatis dolore.
+      <strong>
+        Hi Every Body this is the first tunisian site that allow you to shop any
+        ammount you want of Free Fire Diamonds,membership or elite pass with
+        easy and secure payment ways also we provide a boost service that helps
+        players to improve their ranking fast. You are all welcome ❤️.
+      </strong>
     </p>
     <br />
     <br />
@@ -54,19 +58,21 @@
     <br />
     <br />
     <iframe
-      src="https://www.youtube.com/watch?v=E_Gp2vGpkK8"
-      width="560"
-      height="315"
+      width="1019"
+      height="573"
+      src="https://www.youtube.com/embed/E_Gp2vGpkK8"
       frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
     <br />
     <br />
     <iframe
-      src="https://www.youtube.com/watch?v=WRTVv819wHo"
-      width="560"
-      height="315"
+      width="1019"
+      height="573"
+      src="https://www.youtube.com/embed/WRTVv819wHo"
       frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
     <br />
