--- a/Prices.html
+++ b/Prices.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <img id="top" src="./images/2.JPG" alt="logo" width="200" />
     <ul>
       <li>
         <a href="./index.html">
@@ -30,13 +31,12 @@
       </li>
     </ul>
 
-    <img id="top" src="./images/2.JPG" alt="logo" width="200" />
     <h2>
       Welcome To Our Site The <sup>1st</sup> Free Fire Shop in Tunisia
       <sub>By ibrahimcr7</sub>
     </h2>
     <br />
-    <img src="./images/3.jpg" width="100%" alt="image of Diamand" />
+    <img class="free" src="./images/3.jpg" alt="image of Diamand" />
     <h1>Prices:</h1>
     <table style="border: 1px solid white; border-spacing: 30px;">
       <tr>
