--- a/Contact Us.html
+++ b/Contact Us.html
@@ -36,10 +36,12 @@
       <sub>By ibrahimcr7</sub>
     </h2>
     <br />
-    <img class="free" src="./images/3.jpg" alt="image of Diamand" />
+    <h1 class="degla"></h1>
     <h1>Recharge Free Fire Diamonds</h1>
     <br />
-    <img src="./images/1.jpg" alt="image of Diamond" />
+    <div>
+      <img class="fb" src="./images/1.jpg" alt="image of Diamond" />
+    </div>
     <h5>
       Hi guys if you want to contact us you can send a message:
     </h5>
