--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <sub>By ibrahimcr7</sub>
     </h2>
     <br />
-    <img class="free" src="./images/3.jpg" alt="image of Diamand" />
+    <h1 class="degla"></h1>
     <br />
     <br />
     <br />
