--- a/Payment.html
+++ b/Payment.html
@@ -36,7 +36,7 @@
       <sub>By ibrahimcr7</sub>
     </h2>
     <br />
-    <img class="free" src="./images/3.jpg" alt="image of Diamand" />
+    <h1 class="degla"></h1>
     <h1>Payment info</h1>
     <form action="" method="">
       <label for="name"> Full Name</label>
