--- a/Prices.html
+++ b/Prices.html
@@ -36,7 +36,7 @@
       <sub>By ibrahimcr7</sub>
     </h2>
     <br />
-    <img class="free" src="./images/3.jpg" alt="image of Diamand" />
+    <h1 class="degla"></h1>
     <h1>Prices:</h1>
     <table style="border: 1px solid white; border-spacing: 30px;">
       <tr>
